--- a/Indexation_requete/Indexation_plantes.ipynb
+++ b/Indexation_requete/Indexation_plantes.ipynb
@@ -72,7 +72,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 1,
       "metadata": {
         "id": "uJ_ymiWy1lkP"
       },
@@ -1267,7 +1267,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "usr",
+      "display_name": "Python 3",
       "language": "python",
       "name": "python3"
     },
@@ -1281,7 +1281,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.3"
+      "version": "3.12.5"
     }
   },
   "nbformat": 4,
