--- a/Indexation_requete/Indexation_plantes.ipynb
+++ b/Indexation_requete/Indexation_plantes.ipynb
@@ -1267,7 +1267,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "usr",
       "language": "python",
       "name": "python3"
     },
@@ -1281,7 +1281,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.5"
+      "version": "3.12.3"
     }
   },
   "nbformat": 4,
